# hotelprice-datascrapper

./: booking_scraper_v2.py  pyproject.toml
